frontend/test/should_fail/index_exec_edge_fromIndexSameAsArray_return_value_mismatch.grg
#using "index_exec_model.gm"

sequence s(i:array<Node>)
{
	{ i=edgesFromIndexSameAsArray(bari, 42) }
}
